--- a/src/regression_lineaire.qmd
+++ b/src/regression_lineaire.qmd
@@ -2,15 +2,16 @@
 library(dplyr)
 library(ggplot2)
 library(stringr)
+library(glue)
 ```
 
 ```{r}
 source("src/loading_data.R")
 ```
 
-Xprime représente les covariables utilisées pour l'effet causal pour toute la population, si les unités se trouvaient dans le groupe traitement.
+# Implémentations de fonctions
 
-Hypothèse d'homoscédasticité ($\sigma_1=\sigma_2=\sigma$) et de covariance diagonale entre les contrefactuels traités et contrôles.
+Met à zéro les valeurs d'un jeu de données ou d'une partie de celui-ci :
 
 ```{r}
 set_zero <- function(data, 
@@ -28,12 +29,14 @@ set_zero <- function(data,
 }
 ```
 
+Transforme les `factors` en vecteurs numériques :
 
 ```{r}
 factor_to_numeric <- 
   function(factor) as.numeric(levels(factor))[factor]
 ```
 
+Calcule la moyenne d'un facteur composé de 0 et de 1 :
 ```{r}
 mean_factor <- function(factor)
 {
@@ -41,6 +44,10 @@ mean_factor <- function(factor)
 }
 ```
 
+
+`regFun` permet de faire une régression linéaire multiple de type Moindres Carrés Pondérés (on met plus de poids au groupe le plus petit) sur les données observées avec possibilité de prendre un sous-échantillon et d'utiliser des variables différentes pour le vecteur général $\beta$ et le vecteur $\delta$ utilisé pour le calcul de l'impact causal. Xprime représente les covariables utilisées pour l'effet causal pour toute la population, si les unités se trouvaient dans le groupe traitement. La fonction peut optimiser le modèle par AIC (`step = TRUE`) si souhaité.
+
+Hypothèse d'homoscédasticité ($\sigma_1=\sigma_2=\sigma$) et de covariance diagonale entre les contrefactuels traités et contrôles.
 
 ```{r}
 regFun <- function(Yobs, group, X, XPrime = X, subset = NULL, step = FALSE)
@@ -72,7 +79,6 @@ regFun <- function(Yobs, group, X, XPrime = X, subset = NULL, step = FALSE)
   order2Terms <- c(order2Terms, 
                    paste(quantVars, "^2", sep = ""))
   
-  
   # On renomme les variables qui sont utilisées uniquement
   # pour le calcul de l'effet
   colnames(XPrime) <- paste(colnames(XPrime), "_delta", sep = "")
@@ -91,9 +97,6 @@ regFun <- function(Yobs, group, X, XPrime = X, subset = NULL, step = FALSE)
   order2TermsPrime <- c(order2TermsPrime, 
                         paste(quantVarsPrime, "^2", sep = ""))
   
-  
-  #qualVarsPrime <- setdiff(colnames(XPrime), quantVarsPrime)
-  
   dataEval <- set_zero(dataEval,
                        subsetUnits = (group == "Control"), 
                        subsetVars = colnames(XPrime))
@@ -102,6 +105,8 @@ regFun <- function(Yobs, group, X, XPrime = X, subset = NULL, step = FALSE)
                        paste(c(order2Terms, order2TermsPrime),
                              collapse = " + "))), data = dataEval)
   
+  # On vérifie si la matrice associée au modèle est de plein rang,
+  # sinon on ne garde que certaines variables
   QR <- qr(crossprod(M))
   vars <- QR$pivot[seq_len(QR$rank)]
   keptVars <- rownames(QR$qr)[vars]
@@ -109,9 +114,9 @@ regFun <- function(Yobs, group, X, XPrime = X, subset = NULL, step = FALSE)
   order2Terms <- intersect(c(order2Terms, order2TermsPrime), keptVars)
   
   
-  formulaProp <- paste("Yobs ~ . + ", 
-                       paste(c(order2Terms, order2TermsPrime),
-                             collapse = " + ")) %>% 
+  formulaProp <- 
+    paste("Yobs ~ . + ", 
+          paste(c(order2Terms, order2TermsPrime), collapse = " + ")) %>% 
     as.formula()
   
   
@@ -120,29 +125,36 @@ regFun <- function(Yobs, group, X, XPrime = X, subset = NULL, step = FALSE)
   
   weights <- rep(nControl^-1L, N)
   weights[group == "Treated"] <- nTreated^-1L
+  # W <- diag(weights)
   
   model <- lm(formulaProp,
               data = dataEval, 
               singular.ok = FALSE,
               weights = weights)
   
+  # Cas où on applique de l'optimisation par AIC
   if (step)
     model <- step(model, k = 2L, trace = 0L)
   
   estimVarYobs <- sum((model$residuals)^2L) / (N - length(coef(model)))
   
+  
   M <- model.matrix(formula(model), data = dataEval)
-  invDesignMat <- solve(t(M) %*% M)
-  # termsWithDelta <- str_detect(colnames(M), "_delta")
-  # invDesignMatDelta <- invDesignMatDelta[termsWithDelta, termsWithDelta]
+  weightedM <- sweep(t(M), 2L, STATS = weights, FUN = "*")
+  
+  WeightsMat <- solve(weightedM %*% M) %*% weightedM
   
   Ycontrol <- ifelse(group == "Control", Yobs, NA_real_)
   Ytreated <- ifelse(group == "Treated", Yobs, NA_real_)
   
+  # Pour l'estimation des traités le jeu de donnée
+  # utilisé correspond aux données X, XPrime complètes
   YtreatedEstim <- predict.lm(model, 
                               newdata = dataEstimTreated, 
                               type = "response")
   
+  # Pour l'estimation du contrôle on nullifie les variables de XPrime,
+  # c-à-d celles associées au coefficient delta
   dataEstimControl <- set_zero(dataEstimTreated, 
                                subsetVars = colnames(XPrime))
   
@@ -150,23 +162,10 @@ regFun <- function(Yobs, group, X, XPrime = X, subset = NULL, step = FALSE)
                               newdata = dataEstimControl,
                               type = "response")
   
-  # dataEstim <- dataEstim %>% 
-  #   mutate_if(is.factor, function(v) as.integer(v) - 1L) %>% 
-  #   mutate(intercept = 1.0, .before = 1L) %>% 
-  #   as.matrix()
-  
-  # coefs <- coef(model)
-  
-  # On nullifie / ne considère pas les coefficients associés 
-  # à l'impact causal (ceux associés à XPrime) pour le groupe contrôle
-  
-  # YcontrolEstim <- dataEstim[, seq_len(p + 1L)] %*% coefs[seq_len(p + 1L)]
-  # YtreatedEstim <- dataEstim %*% coefs
-  
   list(model = model,
        group = group,
        estimVarYobs = estimVarYobs,
-       varCoefs = invDesignMat * estimVarYobs,
+       varCoefs = WeightsMat %*% t(WeightsMat) * estimVarYobs,
        dataEval = dataEval,
        dataComplete = dataEstimTreated,
        Ycontrol = Ycontrol, 
@@ -175,67 +174,6 @@ regFun <- function(Yobs, group, X, XPrime = X, subset = NULL, step = FALSE)
        YtreatedEstim = YtreatedEstim)
 }
 ```
-
-
-Permet d'utiliser `predict.lm` avec terms sans qu'il rende des données centrées.
-```{r}
-## Extracted from stats::predict.lm (called by predict.Glm for type='terms')
-
-ucmterms <-
-  function (object, newdata, terms = NULL, na.action = na.pass, ...) {
-    tt <- terms(object)
-    if (missing(newdata) || is.null(newdata)) {
-      mm <- X <- model.matrix(object)
-      mmDone <- TRUE
-      offset <- object$offset
-    }
-    else {
-      Terms <- delete.response(tt)
-      m <- model.frame(Terms, newdata, na.action = na.action, 
-                       xlev = object$xlevels)
-      if (!is.null(cl <- attr(Terms, "dataClasses"))) 
-        .checkMFClasses(cl, m)
-      X <- model.matrix(Terms, m, contrasts.arg = object$contrasts)
-      mmDone <- FALSE
-    }
-       
-    beta <- object$coefficients
-    nrp <- num.intercepts(object)   # in rms
-    ## If > 1 intercept, remove all but one
-    if(nrp > 1) beta <- cbind(beta[1], beta[-(1 : nrp)])
-       
-    if (!mmDone) {
-      mm <- model.matrix(object)
-      mmDone <- TRUE
-    }
-    aa <- attr(mm, "assign")
-    ll <- attr(tt, "term.labels")
-    hasintercept <- attr(tt, "intercept") > 0L
-    if (hasintercept) ll <- c("(Intercept)", ll)
-    aaa <- factor(aa, labels = ll)
-    asgn <- split(order(aa), aaa)
-    if(hasintercept) asgn$"(Intercept)" <- NULL
-
-    nterms <- length(asgn)
-    if (nterms > 0) {
-      predictor <- matrix(ncol = nterms, nrow = NROW(X))
-      dimnames(predictor) <- list(rownames(X), names(asgn))
-      for(i in seq.int(1L, nterms, length.out = nterms)) {
-        ii <- asgn[[i]]
-        predictor[, i] <- X[, ii, drop = FALSE] %*% beta[ii]
-      }
-      if (!is.null(terms)) predictor <- predictor[, terms, drop = FALSE]
-    } else predictor <- matrix(0, NROW(X), 0L)
-
-    attr(predictor, "constant") <- 0
-
-    if (missing(newdata) && ! is.null(na.act <- object$na.action))
-      predictor <- napredict(na.act, predictor)
-
-    predictor
-}
-```
-
 
 # Régression linéaire multiple classique
 
@@ -251,10 +189,17 @@ dataEval <- resLin$dataEval
 summary(modelLin)
 ```
 
+
 ```{r}
 group <- dataObs$group
 (resLin$Ycontrol - resLin$YcontrolEstim) %>% mean(na.rm = TRUE)
 (resLin$Ytreated - resLin$YtreatedEstim) %>% mean(na.rm = TRUE)
+```
+
+Les estimations moyennes sont sensiblement les mêmes sur les deux échantillons :
+```{r}
+mean(resLin$Ytreated - resLin$YcontrolEstim, na.rm = TRUE)
+mean(resLin$YtreatedEstim - resLin$Ycontrol, na.rm = TRUE)
 ```
 
 Estimation ATE sans conditionnement, sans biais si les $z_k$ sont identiquement distribués
@@ -276,7 +221,8 @@ XMoyDelta <-
 
 varDeltaMoy <- t(XMoyDelta) %*% 
   resLin$varCoefs %*% 
-  XMoyDelta + t(coef(modelLin)) %*% 
+  XMoyDelta + 
+  t(coef(modelLin)) %*% 
   var(XDelta) %*% 
   coef(modelLin) / nrow(XDelta) 
 
@@ -315,15 +261,49 @@ summary(modelLinAIC)
 rm(dataEval)
 ```
 
+Différence au niveau des coefficients :
+```{r}
+coefsLin <- coef(modelLin)
+coefsLinAIC <- coef(modelLinAIC)
+
+differencesCoefs <- data.frame(var = names(coefsLin), 
+                               lin = coefsLin, 
+                               linAIC = 0.0)
+
+differencesCoefs[names(coefsLinAIC), "linAIC"] <- coefsLinAIC
+differencesCoefs %>% 
+  slice(-1L) %>%
+  mutate(coeffType = ifelse(str_detect(var, "_delta"), "delta", "beta"), 
+         .after = "var") %>% 
+  mutate(coeffConsAIC = linAIC != 0.0) %>% 
+  mutate(difference = lin - linAIC) %>% 
+  group_by(coeffType, coeffConsAIC) %>% 
+  arrange(-abs(difference), .by_group = TRUE) %>% 
+  ungroup() %>% 
+  select(-coeffConsAIC) %>% 
+  print(n = Inf)
+```
+
+Qualité de prédiction sur les observés :
+
 ```{r}
 mean(resLinAIC$Ytreated - resLinAIC$YtreatedEstim, na.rm = TRUE)
-mean(resLinAIC$YcontrolEstim - resLinAIC$Ycontrol, na.rm = TRUE)
+mean(resLinAIC$Ycontrol - resLinAIC$YcontrolEstim, na.rm = TRUE)
 ```
+
+Les prédictions d'impact sont très différentes en fonction du groupe avec lequel on travaille :
+```{r}
+mean(resLinAIC$Ytreated - resLinAIC$YcontrolEstim, na.rm = TRUE)
+mean(resLinAIC$YtreatedEstim - resLinAIC$Ycontrol, na.rm = TRUE)
+```
+
 Estimation de l'ATE :
 
 ```{r}
 mean(resLinAIC$YtreatedEstim - resLinAIC$YcontrolEstim)
 ```
+
+La prédiction ponctuelle est très mauvaise. On garde le modèle global.
 
 ```{r}
 XDeltaAIC <- set_zero(resLinAIC$dataComplete, subsetVars = listCovariates) %>% 
@@ -335,41 +315,52 @@ XMoyDeltaAIC <-
   XDeltaAIC %>% 
   apply(MARGIN = 2L, mean)
 
-varDeltaMoy <- t(XMoyDeltaAIC) %*% 
+varDeltaMoyAIC <- t(XMoyDeltaAIC) %*% 
   resLinAIC$varCoefs %*% 
   XMoyDeltaAIC + t(coef(modelLinAIC)) %*% 
   var(XDeltaAIC) %*% 
   coef(modelLinAIC) / nrow(XDeltaAIC) 
 
-varDeltaMoy <- varDeltaMoy %>% as.numeric()
+varDeltaMoyAIC <- varDeltaMoyAIC %>% as.numeric()
 
-varDeltaMoy
+varDeltaMoyAIC
 ```
 
 ```{r}
-rm(XMoyDelta)
+rm(coefsLin, coefsLinAIC, differencesCoefs)
+rm(XDeltaAIC, XMoyDeltaAIC, varDeltaMoyAIC)
 ```
 
 
 
 # Régression sous support commun
 
-Rubin & Imbens (2015), p. 366
+La régression sur support commun se base sur le score de propension. On charge les calculs réalisés pour l'analyse descriptive :
+
+
 
 ```{r}
 source("src/calcul_propension.R")
 ```
 
-Calcul des variances conditionnelles pour la variable $T_k$.
+
+On va chercher un intervalle de la forme $I_\alpha := [\alpha, 1-\alpha]$ qui va contenir les scores de propensions estimés que l'on accepte de conserver. Une méthode est proposée dans Rubin & Imbens (2015), p. 366.
+
+Calcul des inverses des variances conditionnelles pour la variable $T_k$.
 
 ```{r}
-varianceProp <- propValues * (1.0 - propValues)
-invVar <- 1.0 / varianceProp
-maxInvVar <- max(invVar)
-meanInvVar <- mean(invVar)
-
-maxInvVar <= 2.0 * meanInvVar
+ordInvVar <- sort((propValues * (1.0 - propValues))^-1L)
 ```
+
+On regarde s'il faut laisser l'ensemble tel quel on cherche un $\alpha$ :
+
+```{r}
+maxInvVar <- last(ordInvVar)
+meanInvVar <- mean(ordInvVar)
+
+glue("Conserver l'ensemble tel quel : {maxInvVar <= 2.0 * meanInvVar}")
+```
+
 
 On cherche le premier gamma qui permet que le terme de gauche dépasse le terme de droite.
 
@@ -379,26 +370,30 @@ for (k in seq_along(ordInvVar))
 {
   if (k * ordInvVar[k] >= 2.0 * sum(ordInvVar[seq_len(k)]))
   {
-    gamma <- ordInvVar[k]
+    gamma <- unname(ordInvVar[k])
     break
   }
 }
 ```
 
 ```{r}
-k * unname(ordInvVar[k])
+k * unname(gamma)
 2.0 * sum(ordInvVar[seq_len(k)])
+rm(ordInvVar, k)
 ```
-
+La différence entre les deux termes est très faible, on peut rester sur cette valeur. On calcule l'estimateur $\hat{\alpha}$ associé :
 
 ```{r}
 alpha <- 0.5 - sqrt(0.25 - 1.0 / gamma)
+alpha
 ```
 
+On en déduit un masque logique permettant de conserver uniquement les individus avec un score de propension dans l'intervalle.
 ```{r}
 maskTrimming <- alpha <= propValues & propValues <= 1.0 - alpha
 ```
 
+Nombre d'individus conservés avec cette méthode, puis en particulier nombre d'individus traités conservés :
 ```{r}
 sum(maskTrimming)
 sum(maskTrimming[group == "Treated"])
@@ -411,6 +406,7 @@ Problème de rang (en particulier très peu de `Hispanic`) : on laisse tous les 
 maskTrimming[group == "Treated"] <- TRUE
 ```
 
+Affichage des courbes de score de propension sur avec restriction à $I_\alpha$ :
 ```{r}
 dataProp <- dataObs %>% 
   select(group) %>% 
@@ -419,15 +415,20 @@ dataProp <- dataObs %>%
 dataProp %>% 
   filter(maskTrimming) %>% 
   ggplot() + 
-  geom_histogram(aes(x = e, colour = group))
+  geom_density(aes(x = e, colour = group)) +
+  ggtitle("Score de propension (estimé) en fonction du groupe") +
+  xlab("Score de propension") +
+  ylab("Densité")
 ```
-
+Les scores sont moins proche de zéro, et les distribution sont un peu plus similaires que sans restriction. En tout cas les deux distributions ont clairement un support commun.
 
 ## Modèle global
 
 ```{r}
 resTrim <- regFun(dataObs$RE78, dataObs$group, 
-                    dataObs[, listCovariates], subset = maskTrimming)
+                    dataObs[, listCovariates],
+                  subset = maskTrimming)
+
 modelTrim <- resTrim$model
 ```
 
@@ -435,10 +436,15 @@ modelTrim <- resTrim$model
 summary(modelTrim)
 ```
 
-
-Estimation ATE sans biais si $z_k$ identiquement distribués conditionnellement à la présence dans l'intervalle
+Les estimations sur les deux groupes sont similaires en moyenne :
 ```{r}
-mean(resLin$YtreatedEstim - resLin$YcontrolEstim)
+mean(resTrim$Ytreated - resTrim$YcontrolEstim, na.rm = TRUE)
+mean(resTrim$YtreatedEstim - resTrim$Ycontrol, na.rm = TRUE)
+```
+
+Estimation ATE sur l'intervalle $I_\alpha$ sans biais si $z_k$ identiquement distribués conditionnellement à la présence dans l'intervalle
+```{r}
+mean(resTrim$YtreatedEstim - resTrim$YcontrolEstim)
 ```
 
 
@@ -471,10 +477,10 @@ varDeltaMoyTrim
 
 
 ```{r}
-
 resTrimAIC <- regFun(dataObs$RE78, dataObs$group, 
                      dataObs[, listCovariates], 
-                     subset = maskTrimming, step = TRUE)
+                     subset = maskTrimming, 
+                     step = TRUE)
 
 modelTrimAIC <- resTrimAIC$model
 dataEval <- resTrimAIC$dataEval
@@ -484,11 +490,18 @@ dataEval <- resTrimAIC$dataEval
 summary(modelTrimAIC)
 ```
 
+Validité des prédictions sur données observées :
+```{r}
+mean(resTrimAIC$Ytreated - resTrimAIC$YtreatedEstim, na.rm = TRUE)
+mean(resTrimAIC$Ycontrol - resTrimAIC$YcontrolEstim, na.rm = TRUE)
+```
 
+Comparaison des impacts estimés en utilisant une donnée observée pour chaque estimation :
 ```{r}
 mean(resTrimAIC$Ytreated - resTrimAIC$YcontrolEstim, na.rm = TRUE)
 mean(resTrimAIC$YtreatedEstim - resTrimAIC$Ycontrol, na.rm = TRUE)
 ```
+Les résultats sont proches.
 
 Estimation ATE sans biais si $z_k$ identiquement distribués conditionnellement à la présence dans l'intervalle
 ```{r}
@@ -520,6 +533,11 @@ varDeltaMoyTrimAIC <- varDeltaMoyTrimAIC %>% as.numeric()
 
 varDeltaMoyTrimAIC
 ```
+
+```{r}
+rm(alpha)
+```
+
 
 
 # Matching
