Ajouts mineurs régression linéaire

--- a/src/regression_lineaire.qmd
+++ b/src/regression_lineaire.qmd
@@ -190,12 +190,6 @@ summary(modelLin)
 ```
 
 
-```{r}
-group <- dataObs$group
-(resLin$Ycontrol - resLin$YcontrolEstim) %>% mean(na.rm = TRUE)
-(resLin$Ytreated - resLin$YtreatedEstim) %>% mean(na.rm = TRUE)
-```
-
 Les estimations moyennes sont sensiblement les mêmes sur les deux échantillons :
 ```{r}
 mean(resLin$Ytreated - resLin$YcontrolEstim, na.rm = TRUE)
@@ -250,8 +244,8 @@ dataEval <- resLinAIC$dataEval
 
 ```{r}
 summary(modelLinAIC)
-# summary(modelLinAIC)$coefficients[str_detect(names(coef(modelLinAIC)), "_delta"), ] %>%
-#   round(4L) %>% 
+# summary(modelLinAIC)$coefficients[str_detect(names(coef(modelLinAIC)), "_delta"), -4L] %>%
+#   round(4L) %>%
 #   conversion_latex(nom = "reg_lin_global_AIC",
 #                    caption = "Coefficients MCO de la régression linéaire sur E (optimisée par AIC)")
 ```
@@ -266,30 +260,27 @@ Différence au niveau des coefficients :
 coefsLin <- coef(modelLin)
 coefsLinAIC <- coef(modelLinAIC)
 
-differencesCoefs <- data.frame(var = names(coefsLin), 
+differencesCoefsLin <- data.frame(var = names(coefsLin), 
                                lin = coefsLin, 
                                linAIC = 0.0)
 
-differencesCoefs[names(coefsLinAIC), "linAIC"] <- coefsLinAIC
-differencesCoefs %>% 
-  slice(-1L) %>%
+differencesCoefsLin[names(coefsLinAIC), "linAIC"] <- coefsLinAIC
+differencesCoefsLin <- 
+  differencesCoefsLin %>% 
+  # slice(-1L) %>%
   mutate(coeffType = ifelse(str_detect(var, "_delta"), "delta", "beta"), 
          .after = "var") %>% 
   mutate(coeffConsAIC = linAIC != 0.0) %>% 
-  mutate(difference = lin - linAIC) %>% 
+  mutate(difference = lin - linAIC) 
+
+differencesCoefsLin %>% 
   group_by(coeffType, coeffConsAIC) %>% 
-  arrange(-abs(difference), .by_group = TRUE) %>% 
-  ungroup() %>% 
-  select(-coeffConsAIC) %>% 
+  arrange(-abs(difference), .by_group = TRUE) %>%
+  ungroup() %>%
+  select(-coeffConsAIC) %>%
   print(n = Inf)
 ```
 
-Qualité de prédiction sur les observés :
-
-```{r}
-mean(resLinAIC$Ytreated - resLinAIC$YtreatedEstim, na.rm = TRUE)
-mean(resLinAIC$Ycontrol - resLinAIC$YcontrolEstim, na.rm = TRUE)
-```
 
 Les prédictions d'impact sont très différentes en fonction du groupe avec lequel on travaille :
 ```{r}
@@ -365,7 +356,6 @@ glue("Conserver l'ensemble tel quel : {maxInvVar <= 2.0 * meanInvVar}")
 On cherche le premier gamma qui permet que le terme de gauche dépasse le terme de droite.
 
 ```{r}
-ordInvVar <- sort(invVar)
 for (k in seq_along(ordInvVar))
 {
   if (k * ordInvVar[k] >= 2.0 * sum(ordInvVar[seq_len(k)]))
@@ -396,14 +386,14 @@ maskTrimming <- alpha <= propValues & propValues <= 1.0 - alpha
 Nombre d'individus conservés avec cette méthode, puis en particulier nombre d'individus traités conservés :
 ```{r}
 sum(maskTrimming)
-sum(maskTrimming[group == "Treated"])
+sum(maskTrimming[dataObs$group == "Treated"])
 ```
 
 Tous les traités ne sont pas conservés.
 
 Problème de rang (en particulier très peu de `Hispanic`) : on laisse tous les traités.
 ```{r}
-maskTrimming[group == "Treated"] <- TRUE
+maskTrimming[dataObs$group == "Treated"] <- TRUE
 ```
 
 Affichage des courbes de score de propension sur avec restriction à $I_\alpha$ :
@@ -435,6 +425,7 @@ modelTrim <- resTrim$model
 ```{r}
 summary(modelTrim)
 ```
+
 
 Les estimations sur les deux groupes sont similaires en moyenne :
 ```{r}
@@ -488,12 +479,49 @@ dataEval <- resTrimAIC$dataEval
 
 ```{r}
 summary(modelTrimAIC)
+
+# summary(modelTrimAIC)$coefficients[str_detect(names(coef(modelTrimAIC)), "_delta"), ] %>%
+#   round(4L) %>%
+#   conversion_latex(nom = "reg_lin_trim_AIC",
+#                    caption = "Coefficients MCO de la régression linéaire sur espace tronqué (optimisée par AIC)")
 ```
 
-Validité des prédictions sur données observées :
+
+Comparaison des coefficients avec les deux modèles tronqués :
 ```{r}
-mean(resTrimAIC$Ytreated - resTrimAIC$YtreatedEstim, na.rm = TRUE)
-mean(resTrimAIC$Ycontrol - resTrimAIC$YcontrolEstim, na.rm = TRUE)
+coefsTrim <- coef(modelTrim)
+coefsTrimAIC <- coef(modelTrimAIC)
+
+differencesCoefsTrim <- data.frame(var = names(coefsTrim), 
+                               trim = coefsTrim, 
+                               trimAIC = 0.0)
+
+differencesCoefsTrim[names(coefsTrimAIC), "trimAIC"] <- coefsTrimAIC
+differencesCoefsTrim <-
+  differencesCoefsTrim %>% 
+  mutate(coeffType = ifelse(str_detect(var, "_delta"), "delta", "beta"), 
+         .after = "var") %>% 
+  mutate(coeffConsAIC = trimAIC != 0.0) %>% 
+  mutate(difference = trim - trimAIC)
+
+
+differencesCoefsTrim %>% 
+  group_by(coeffType, coeffConsAIC) %>% 
+  arrange(-abs(difference), .by_group = TRUE) %>% 
+  ungroup() %>% 
+  select(-coeffConsAIC) %>% 
+  filter(coeffType == "delta", trimAIC != 0.0) %>% 
+  print(n = Inf)
+```
+Comparaison des coefficients entre les modèles AIC sur $E$ et ensemble tronqué :
+
+```{r}
+differencesCoefsLin %>% 
+  select(var, lin, linAIC) %>% 
+  inner_join(differencesCoefsTrim, by = join_by(var)) %>% 
+  filter(coeffType == "delta") %>% 
+  select(var, linAIC, trimAIC) %>% 
+  filter(linAIC != 0.0 | trimAIC != 0.0)
 ```
 
 Comparaison des impacts estimés en utilisant une donnée observée pour chaque estimation :
@@ -539,5 +567,14 @@ rm(alpha)
 ```
 
 
+```{r}
+df = data.frame(complete = c(0.0, 0.0, 0.0), AIC = c(0.0,0.0, 0.0))
+rownames(df) = c("DeltaT", "DeltaC", "ATE")
+
+
+df %>%
+  conversion_latex(nom = "reg_trim_test_predictions",
+                   caption = "Mesure de qualité d'estimation par ensemble sous espace tronqué")
+```
 
 # Matching
